--- a/about.html
+++ b/about.html
@@ -1,3 +1,5 @@
+{% comment %} this file has been fixed by zafar on branch feature1
+ {% endcomment %}
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
